--- a/src/app/core/audit/audit-view-details-modal/audit-view-details-modal.component.html
+++ b/src/app/core/audit/audit-view-details-modal/audit-view-details-modal.component.html
@@ -9,9 +9,11 @@
 >
 	<div class="row">
 		<div class="col-md-12">
-			<h4 *ngIf="auditEntry?.audit?.object?.title">
-				{{ auditEntry?.audit?.object?.title }}
-			</h4>
+			@if (auditEntry?.audit?.object?.title) {
+				<h4>
+					{{ auditEntry?.audit?.object?.title }}
+				</h4>
+			}
 			<pre>{{ auditEntry?.audit?.object | json }}</pre>
 		</div>
 	</div>
