--- a/src/app/core/site-container/site-container.component.html
+++ b/src/app/core/site-container/site-container.component.html
@@ -2,9 +2,11 @@
 
 <!-- Site Header -->
 <header class="site-header">
-	<div class="site-banner" *ngIf="bannerHtml">
-		<div class="header-banner" [innerHtml]="bannerHtml"></div>
-	</div>
+	@if (bannerHtml) {
+		<div class="site-banner">
+			<div class="header-banner" [innerHtml]="bannerHtml"></div>
+		</div>
+	}
 </header>
 
 <!-- Site content -->
@@ -18,13 +20,16 @@
 
 <!-- Site Footer -->
 <footer class="site-footer">
-	<div class="site-banner" *ngIf="copyrightHtml">
-		<div class="copyright-banner" [innerHtml]="copyrightHtml"></div>
-	</div>
-
-	<div class="site-banner" *ngIf="bannerHtml">
-		<div class="footer-banner" [innerHtml]="bannerHtml"></div>
-	</div>
+	@if (copyrightHtml) {
+		<div class="site-banner">
+			<div class="copyright-banner" [innerHtml]="copyrightHtml"></div>
+		</div>
+	}
+	@if (bannerHtml) {
+		<div class="site-banner">
+			<div class="footer-banner" [innerHtml]="bannerHtml"></div>
+		</div>
+	}
 </footer>
 
 <app-feedback-flyout *isAuthenticated="true; and: showFeedbackFlyout"></app-feedback-flyout>
