--- a/src/app/common/modal/configurable-modal/configurable-modal.component.html
+++ b/src/app/common/modal/configurable-modal/configurable-modal.component.html
@@ -6,30 +6,33 @@
 	(cancel)="cancel()"
 	(ok)="ok()"
 >
-	<p *ngIf="message" [innerHTML]="message"></p>
+	@if (message) {
+		<p [innerHTML]="message"></p>
+	}
 	<form id="modalForm" #modalForm="ngForm">
-		<div class="form-group" *ngFor="let input of inputs; first as isFirst">
-			<label [class.form-required]="input.required">{{ input.label }}</label>
-
-			<textarea
-				class="form-control text-area"
-				[name]="input.key"
-				placeholder="Enter {{ input.label }}..."
-				*ngIf="input.type === 'textarea'"
-				[(ngModel)]="formData[input.key]"
-				[required]="input.required"
-			>
-			</textarea>
-
-			<input
-				class="form-control"
-				[name]="input.key"
-				[type]="input.type"
-				placeholder="Enter {{ input.label | lowercase }}..."
-				*ngIf="input.type !== 'textarea'"
-				[(ngModel)]="formData[input.key]"
-				[required]="input.required"
-			/>
-		</div>
+		@for (input of inputs; track input; let isFirst = $first) {
+			<div class="form-group">
+				<label [class.form-required]="input.required">{{ input.label }}</label>
+				@if (input.type === 'textarea') {
+					<textarea
+						class="form-control text-area"
+						[name]="input.key"
+						placeholder="Enter {{ input.label }}..."
+						[(ngModel)]="formData[input.key]"
+						[required]="input.required"
+					>
+					</textarea>
+				} @else {
+					<input
+						class="form-control"
+						[name]="input.key"
+						[type]="input.type"
+						placeholder="Enter {{ input.label | lowercase }}..."
+						[(ngModel)]="formData[input.key]"
+						[required]="input.required"
+					/>
+				}
+			</div>
+		}
 	</form>
 </asy-modal>
