--- a/src/app/common/modal/modal/modal.component.html
+++ b/src/app/common/modal/modal/modal.component.html
@@ -13,9 +13,11 @@
 </section>
 
 <section class="modal-footer">
-	<button class="btn btn-outline-secondary mr-2" *ngIf="cancelText" (click)="cancel.emit()">
-		{{ cancelText }}
-	</button>
+	@if (cancelText) {
+		<button class="btn btn-outline-secondary mr-2" (click)="cancel.emit()">
+			{{ cancelText }}
+		</button>
+	}
 	<button class="btn btn-primary" [disabled]="disableOk" (click)="ok.emit()">
 		{{ okText }}
 	</button>
