--- a/src/app/common/table/column-chooser/column-chooser.component.html
+++ b/src/app/common/table/column-chooser/column-chooser.component.html
@@ -12,28 +12,27 @@
 	[cdkDropListData]="_columns"
 	(cdkDropListDropped)="onDrop($event)"
 >
-	<div
-		class="form-check text-nowrap ml-1"
-		cdkDrag
-		cdkDragBoundary=".column-drag-boundary"
-		*ngFor="let column of _columns"
-		[cdkDragData]="column"
-		[cdkDragDisabled]="sortingDisabled"
-	>
-		<span
-			class="fa-solid fa-lg fa-bars pr-1 mr-2"
-			cdkDragHandle
-			*ngIf="!sortingDisabled"
-		></span>
-		<input
-			class="form-check-input"
-			id="column-chooser-{{ column.key }}-checkbox"
-			type="checkbox"
-			[(ngModel)]="column.selected"
-			(change)="onChange()"
-		/>
-		<label class="form-check-label" for="column-chooser-{{ column.key }}-checkbox">
-			{{ column.label || (column.key | titlecase) }}
-		</label>
-	</div>
+	@for (column of _columns; track column) {
+		<div
+			class="form-check text-nowrap ml-1"
+			cdkDrag
+			cdkDragBoundary=".column-drag-boundary"
+			[cdkDragData]="column"
+			[cdkDragDisabled]="sortingDisabled"
+		>
+			@if (!sortingDisabled) {
+				<span class="fa-solid fa-lg fa-bars pr-1 mr-2" cdkDragHandle></span>
+			}
+			<input
+				class="form-check-input"
+				id="column-chooser-{{ column.key }}-checkbox"
+				type="checkbox"
+				[(ngModel)]="column.selected"
+				(change)="onChange()"
+			/>
+			<label class="form-check-label" for="column-chooser-{{ column.key }}-checkbox">
+				{{ column.label || (column.key | titlecase) }}
+			</label>
+		</div>
+	}
 </div>
