--- a/src/app/common/table/columns/expandable-list/asy-expandable-list-column.component.html
+++ b/src/app/common/table/columns/expandable-list/asy-expandable-list-column.component.html
@@ -18,28 +18,33 @@
 		*cdkCellDef="let item; let index = index"
 	>
 		<div class="d-flex justify-content-between align-items-stretch">
-			<div class="list-column-collapsible" *ngIf="item[name]?.length > 0">
-				<div class="list-item text-nowrap" *ngFor="let listItem of item[name]">
-					<ng-template #defaultItemTemplate>
-						{{ listItem }}
-					</ng-template>
-
-					<ng-template
-						[ngTemplateOutlet]="itemTemplate || defaultItemTemplate"
-						[ngTemplateOutletContext]="{
-							listItem: listItem,
-							item: item,
-							index: item.index
-						}"
-					>
-					</ng-template>
+			@if (item[name]?.length > 0) {
+				<div class="list-column-collapsible">
+					@for (listItem of item[name]; track listItem) {
+						<div class="list-item text-nowrap">
+							<ng-template #defaultItemTemplate>
+								{{ listItem }}
+							</ng-template>
+							<ng-template
+								[ngTemplateOutlet]="itemTemplate || defaultItemTemplate"
+								[ngTemplateOutletContext]="{
+									listItem: listItem,
+									item: item,
+									index: item.index
+								}"
+							>
+							</ng-template>
+						</div>
+					}
 				</div>
-			</div>
-			<div class="pl-auto" *ngIf="item[name]?.length > 1">
-				<button class="btn btn-sm btn-link py-0" (click)="toggle(item)">
-					<span class="fa-solid fa-lg fa-angle-down"></span>
-				</button>
-			</div>
+			}
+			@if (item[name]?.length > 1) {
+				<div class="pl-auto">
+					<button class="btn btn-sm btn-link py-0" (click)="toggle(item)">
+						<span class="fa-solid fa-lg fa-angle-down"></span>
+					</button>
+				</div>
+			}
 		</div>
 	</td>
 </ng-container>
