--- a/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.html
+++ b/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.html
@@ -27,7 +27,7 @@
 	(overlayOutsideClick)="isOpen = false"
 >
 	<div class="dropdown-menu d-flex flex-column" cdkTrapFocus cdkTrapFocusAutoCapture>
-		<ng-container *ngIf="showSearch">
+		@if (showSearch) {
 			<div class="search mt-2">
 				<asy-search-input
 					placeholder="Search..."
@@ -37,8 +37,8 @@
 				</asy-search-input>
 			</div>
 			<div class="divider dropdown-divider mb-0 mx-3"></div>
-		</ng-container>
-		<ng-container *ngIf="isFiltered">
+		}
+		@if (isFiltered) {
 			<div class="clear mt-2">
 				<button
 					class="btn btn-sm btn-link px-0 text-decoration-underline"
@@ -48,48 +48,49 @@
 				</button>
 			</div>
 			<div class="divider dropdown-divider mb-0 mx-3"></div>
-		</ng-container>
+		}
 		<div class="flex-grow-1 overflow-auto my-2">
-			<ng-container *ngFor="let option of _options">
-				<div class="form-check" *ngIf="!option.hide">
-					<input
-						class="form-check-input"
-						id="filter-{{ id }}-option-{{ option.value }}"
-						type="checkbox"
-						[(ngModel)]="option.active"
-						[ngModelOptions]="{ standalone: true }"
-						(ngModelChange)="onFilterChange()"
-					/>
-					<label
-						class="form-check-label"
-						for="filter-{{ id }}-option-{{ option.value }}"
-						>{{ option.display }}</label
-					>
-				</div>
-			</ng-container>
+			@for (option of _options; track option) {
+				@if (!option.hide) {
+					<div class="form-check">
+						<input
+							class="form-check-input"
+							id="filter-{{ id }}-option-{{ option.value }}"
+							type="checkbox"
+							[(ngModel)]="option.active"
+							[ngModelOptions]="{ standalone: true }"
+							(ngModelChange)="onFilterChange()"
+						/>
+						<label
+							class="form-check-label"
+							for="filter-{{ id }}-option-{{ option.value }}"
+							>{{ option.display }}</label
+						>
+					</div>
+				}
+			}
 		</div>
-		<ng-container *ngIf="showMatch">
+		@if (showMatch) {
 			<div class="divider dropdown-divider my-0 mx-3"></div>
 			<div class="my-1">
 				<label class="mb-0 mr-3">Match:</label>
-				<div
-					class="form-check form-check-inline"
-					*ngFor="let operatorOption of [false, true]; index as i"
-				>
-					<input
-						class="form-check-input"
-						id="operator-option-{{ i }}"
-						name="operator-option-radio"
-						type="radio"
-						[value]="operatorOption"
-						[(ngModel)]="matchAll"
-						(ngModelChange)="onFilterChange()"
-					/>
-					<label class="form-check-label" for="operator-option-{{ i }}">{{
-						operatorOption ? 'All' : 'Any'
-					}}</label>
-				</div>
+				@for (operatorOption of [false, true]; track operatorOption; let i = $index) {
+					<div class="form-check form-check-inline">
+						<input
+							class="form-check-input"
+							id="operator-option-{{ i }}"
+							name="operator-option-radio"
+							type="radio"
+							[value]="operatorOption"
+							[(ngModel)]="matchAll"
+							(ngModelChange)="onFilterChange()"
+						/>
+						<label class="form-check-label" for="operator-option-{{ i }}">{{
+							operatorOption ? 'All' : 'Any'
+						}}</label>
+					</div>
+				}
 			</div>
-		</ng-container>
+		}
 	</div>
 </ng-template>
