--- a/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
+++ b/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
@@ -2,16 +2,18 @@
 	<button>
 		<ng-content></ng-content>
 
-		<span class="fa-stack" *ngIf="sortable">
-			<span
-				class="fa-solid fa-sort-desc fa-stack-1x low-opacity"
-				[class.sorted]="isSorted && sortDir === 'DESC'"
-			></span>
-			<span
-				class="fa-solid fa-sort-asc fa-stack-1x low-opacity"
-				[class.sorted]="isSorted && sortDir === 'ASC'"
-			></span>
-		</span>
+		@if (sortable) {
+			<span class="fa-stack">
+				<span
+					class="fa-solid fa-sort-desc fa-stack-1x low-opacity"
+					[class.sorted]="isSorted && sortDir === 'DESC'"
+				></span>
+				<span
+					class="fa-solid fa-sort-asc fa-stack-1x low-opacity"
+					[class.sorted]="isSorted && sortDir === 'ASC'"
+				></span>
+			</span>
+		}
 	</button>
 	<ng-content select="asy-header-filter"></ng-content>
 </div>
