--- a/src/app/common/table/table-empty-state/asy-table-empty-state.component.html
+++ b/src/app/common/table/table-empty-state/asy-table-empty-state.component.html
@@ -1,29 +1,30 @@
-<asy-skeleton-rows
-	*ngIf="dataSource.loading"
-	[rows]="dataSource.pageChangeEvent$.value.pageSize"
-></asy-skeleton-rows>
-<div
-	class="media justify-content-center py-5"
-	*ngIf="!dataSource.loading && dataSource.pagingResults$.value.elements.length === 0"
->
-	<ng-container *ngIf="dataSource.isFiltered">
-		<img src="/assets/images/empty-state/no-results.png" *ngIf="showIcons" />
-		<div class="d-flex flex-column align-items-start">
-			<h1>{{ filteredText }}</h1>
-			<button
-				class="btn btn-primary px-4 mt-2"
-				type="button"
-				*ngIf="showClearFilters"
-				(click)="clearFilters.emit()"
-			>
-				Reset Filters
-			</button>
-		</div>
-	</ng-container>
-	<ng-container *ngIf="!dataSource.isFiltered">
-		<img src="/assets/images/empty-state/no-data.png" *ngIf="showIcons" />
-		<div class="d-flex flex-column align-items-start">
-			<h1>{{ emptyText }}</h1>
-		</div>
-	</ng-container>
-</div>
+@if (dataSource.loading) {
+	<asy-skeleton-rows [rows]="dataSource.pageChangeEvent$.value.pageSize"></asy-skeleton-rows>
+} @else if (dataSource.pagingResults$.value.elements.length === 0) {
+	<div class="media justify-content-center py-5">
+		@if (dataSource.isFiltered) {
+			@if (showIcons) {
+				<img src="/assets/images/empty-state/no-results.png" />
+			}
+			<div class="d-flex flex-column align-items-start">
+				<h1>{{ filteredText }}</h1>
+				@if (showClearFilters) {
+					<button
+						class="btn btn-primary px-4 mt-2"
+						type="button"
+						(click)="clearFilters.emit()"
+					>
+						Reset Filters
+					</button>
+				}
+			</div>
+		} @else {
+			@if (showIcons) {
+				<img src="/assets/images/empty-state/no-data.png" />
+			}
+			<div class="d-flex flex-column align-items-start">
+				<h1>{{ emptyText }}</h1>
+			</div>
+		}
+	</div>
+}
