--- a/src/app/core/admin/end-user-agreement/manage-eua/manage-eua.component.html
+++ b/src/app/core/admin/end-user-agreement/manage-eua/manage-eua.component.html
@@ -18,10 +18,11 @@
 	>
 		<h1 class="mb-4">
 			{{ mode | titlecase }} EUA
-			<small *ngIf="mode === 'create'"
-				>Provide the required information to create a new EUA</small
-			>
-			<small *ngIf="mode === 'edit'">Make changes to the EUA's information</small>
+			@if (mode === 'create') {
+				<small>Provide the required information to create a new EUA</small>
+			} @else if (mode === 'edit') {
+				<small>Make changes to the EUA's information</small>
+			}
 		</h1>
 
 		<!-- Basic Information -->
@@ -67,8 +68,10 @@
 			</div>
 		</div>
 
-		<div class="form-group" *ngIf="error">
-			<div class="text-right text-danger font-weight-bolder">{{ error }}</div>
-		</div>
+		@if (error) {
+			<div class="form-group">
+				<div class="text-right text-danger font-weight-bolder">{{ error }}</div>
+			</div>
+		}
 	</form>
 </section>
