--- a/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
+++ b/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
@@ -3,10 +3,9 @@
 		class="feedback-form feedback-{{ status }} d-flex flex-column flex-grow-1 h-100"
 		#flyoutContent
 	>
-		<ng-container *ngIf="status === 'ready'">
+		@if (status === 'ready') {
 			<form #form="ngForm">
 				<h2 class="pb-2">What's on your mind?</h2>
-
 				<div class="form-check pl-0">
 					<input
 						class="form-check-input"
@@ -21,11 +20,9 @@
 						>Ask a question or make a comment</label
 					>
 				</div>
-
-				<ng-container *ngIf="feedback.type === 'general feedback'">
+				@if (feedback.type === 'general feedback') {
 					<ng-container *ngTemplateOutlet="textInput"></ng-container>
-				</ng-container>
-
+				}
 				<div class="form-check pl-0">
 					<input
 						class="form-check-input"
@@ -40,11 +37,9 @@
 						>Suggest a new feature</label
 					>
 				</div>
-
-				<ng-container *ngIf="feedback.type === 'feature request'">
+				@if (feedback.type === 'feature request') {
 					<ng-container *ngTemplateOutlet="textInput"></ng-container>
-				</ng-container>
-
+				}
 				<div class="form-check pl-0">
 					<input
 						class="form-check-input"
@@ -59,10 +54,8 @@
 						>Report a bug/error</label
 					>
 				</div>
-
-				<ng-container *ngIf="feedback.type === 'bug report'">
+				@if (feedback.type === 'bug report') {
 					<h3 class="pt-3 pb-2">What's the bug/error type?</h3>
-
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
@@ -77,7 +70,6 @@
 							>Content or data</label
 						>
 					</div>
-
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
@@ -92,7 +84,6 @@
 							>Styling</label
 						>
 					</div>
-
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
@@ -107,7 +98,6 @@
 							>Technical</label
 						>
 					</div>
-
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
@@ -120,15 +110,16 @@
 						/>
 						<label class="form-check-label mb-2" for="fo-subtype-option-4">Other</label>
 					</div>
-					<div class="mb-2" *ngIf="feedback.subType === 'Other'">
-						<input
-							class="form-control"
-							name="other-description"
-							required
-							[(ngModel)]="feedback.otherText"
-						/>
-					</div>
-
+					@if (feedback.subType === 'Other') {
+						<div class="mb-2">
+							<input
+								class="form-control"
+								name="other-description"
+								required
+								[(ngModel)]="feedback.otherText"
+							/>
+						</div>
+					}
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
@@ -143,26 +134,25 @@
 							>Unsure</label
 						>
 					</div>
-
 					<h3 class="pt-2">What happened?</h3>
 					<ng-container *ngTemplateOutlet="textInput"></ng-container>
-				</ng-container>
-
+				}
 				<ng-template #textInput>
-					<div class="form-group pt-2" *ngIf="classificationOptions">
-						<ng-select
-							name="classification"
-							bindLabel="level"
-							dropdownPosition="bottom"
-							placeholder="Select Classification"
-							required
-							[(ngModel)]="feedback.classification"
-							[clearable]="false"
-							[items]="classificationOptions"
-						>
-						</ng-select>
-					</div>
-
+					@if (classificationOptions) {
+						<div class="form-group pt-2">
+							<ng-select
+								name="classification"
+								bindLabel="level"
+								dropdownPosition="bottom"
+								placeholder="Select Classification"
+								required
+								[(ngModel)]="feedback.classification"
+								[clearable]="false"
+								[items]="classificationOptions"
+							>
+							</ng-select>
+						</div>
+					}
 					<div class="form-group" [class.mb-0]="feedback.type === 'bug report'">
 						<textarea
 							class="form-control"
@@ -190,44 +180,46 @@
 					Send Feedback
 				</button>
 			</div>
-		</ng-container>
-
-		<div class="media p-5" *ngIf="status === 'submitting'">
-			<span class="fa-solid fa-spinner fa-pulse fa-3x fa-fw mr-3"></span>
-			<div class="media-body">
-				<h1 class="mt-0">Submitting</h1>
-			</div>
-		</div>
-
-		<div class="media p-5" *ngIf="status === 'success'">
-			<span class="fa-solid fa-check-circle text-highlight fa-3x fa-fw mr-3"></span>
-			<div class="media-body">
-				<h1 class="mt-0">Thanks!</h1>
-				We got your feedback.
-			</div>
-		</div>
-
-		<div class="p-5" *ngIf="status === 'failure'">
-			<div class="media">
-				<span class="fa-solid fa-exclamation-triangle text-danger fa-3x fa-fw mr-3"></span>
+		}
+		@if (status === 'submitting') {
+			<div class="media p-5">
+				<span class="fa-solid fa-spinner fa-pulse fa-3x fa-fw mr-3"></span>
 				<div class="media-body">
-					<h1 class="mt-0">Unable To send feedback</h1>
-					Something went wrong and we didn't get your feedback.
+					<h1 class="mt-0">Submitting</h1>
 				</div>
 			</div>
-
-			<div class="d-flex justify-content-center mt-4">
-				<button
-					class="btn btn-outline-secondary mr-2"
-					type="button"
-					(click)="status = 'ready'"
-				>
-					Back to Feedback Form
-				</button>
-				<button class="btn btn-primary" type="button" (click)="submit()">
-					Resend Feedback
-				</button>
+		} @else if (status === 'success') {
+			<div class="media p-5">
+				<span class="fa-solid fa-check-circle text-highlight fa-3x fa-fw mr-3"></span>
+				<div class="media-body">
+					<h1 class="mt-0">Thanks!</h1>
+					We got your feedback.
+				</div>
 			</div>
-		</div>
+		} @else if (status === 'failure') {
+			<div class="p-5">
+				<div class="media">
+					<span
+						class="fa-solid fa-exclamation-triangle text-danger fa-3x fa-fw mr-3"
+					></span>
+					<div class="media-body">
+						<h1 class="mt-0">Unable To send feedback</h1>
+						Something went wrong and we didn't get your feedback.
+					</div>
+				</div>
+				<div class="d-flex justify-content-center mt-4">
+					<button
+						class="btn btn-outline-secondary mr-2"
+						type="button"
+						(click)="status = 'ready'"
+					>
+						Back to Feedback Form
+					</button>
+					<button class="btn btn-primary" type="button" (click)="submit()">
+						Resend Feedback
+					</button>
+				</div>
+			</div>
+		}
 	</div>
 </app-flyout>
