--- a/src/app/core/messages/recent-messages/recent-messages.component.html
+++ b/src/app/core/messages/recent-messages/recent-messages.component.html
@@ -1,34 +1,36 @@
-<ng-container *ngIf="messages.length > 0">
+@if (messages.length > 0) {
 	<h4 class="mb-0">Notifications</h4>
 	<div class="cards">
-		<div class="card card-message" *ngFor="let message of messages">
-			<div class="row no-gutters">
-				<div class="col col-alert-icon {{ messageType[message.type] | lowercase }}">
-					<span
-						class="fa-solid alert-icon {{ messageType[message.type] | lowercase }}"
-						[ngClass]="{
-							'fa-check': message.type === messageType.MOTD,
-							'fa-info': message.type === messageType.INFO,
-							'fa-exclamation': message.type === messageType.WARN,
-							'fa-exclamation-triangle': message.type === messageType.ERROR
-						}"
-					></span>
-				</div>
-				<div class="col-alert-body">
-					<div class="card-body">
-						<div class="d-flex">
-							<h4 class="card-title text-truncate mr-3">{{ message.title }}</h4>
-							<span
-								class="fa-solid fa-lg fa-close ml-auto"
-								style="cursor: pointer"
-								(click)="dismissMessage(message)"
-							></span>
+		@for (message of messages; track message) {
+			<div class="card card-message">
+				<div class="row no-gutters">
+					<div class="col col-alert-icon {{ messageType[message.type] | lowercase }}">
+						<span
+							class="fa-solid alert-icon {{ messageType[message.type] | lowercase }}"
+							[ngClass]="{
+								'fa-check': message.type === messageType.MOTD,
+								'fa-info': message.type === messageType.INFO,
+								'fa-exclamation': message.type === messageType.WARN,
+								'fa-exclamation-triangle': message.type === messageType.ERROR
+							}"
+						></span>
+					</div>
+					<div class="col-alert-body">
+						<div class="card-body">
+							<div class="d-flex">
+								<h4 class="card-title text-truncate mr-3">{{ message.title }}</h4>
+								<span
+									class="fa-solid fa-lg fa-close ml-auto"
+									style="cursor: pointer"
+									(click)="dismissMessage(message)"
+								></span>
+							</div>
+							<p class="card-text line-clamp" [innerHTML]="message.body"></p>
 						</div>
-						<p class="card-text line-clamp" [innerHTML]="message.body"></p>
 					</div>
 				</div>
 			</div>
-		</div>
+		}
 	</div>
 	<div class="row m-0">
 		<button class="btn btn-sm btn-link pl-0" type="button" (click)="dismissAll()">
@@ -42,12 +44,16 @@
 			View All
 		</button>
 	</div>
-</ng-container>
-
-<div class="text-center" *ngIf="messages.length === 0 && !loading">
-	<h2 class="mt-4">You're all caught up!</h2>
-	<p class="mb-4">You don't have any new notifications.</p>
-	<button class="btn btn-sm btn-outline-secondary px-3 mb-2" type="button" (click)="viewAll()">
-		View All
-	</button>
-</div>
+} @else if (!loading) {
+	<div class="text-center">
+		<h2 class="mt-4">You're all caught up!</h2>
+		<p class="mb-4">You don't have any new notifications.</p>
+		<button
+			class="btn btn-sm btn-outline-secondary px-3 mb-2"
+			type="button"
+			(click)="viewAll()"
+		>
+			View All
+		</button>
+	</div>
+}
